basic support for straight mapped string lists